--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Mapchart Project</h1>
-    <p>this project helps users to draw choropleth maps easy with provided data ( .json, .csv, .xslx) file and download the result as image</p>
+    updated
   </body>
 </html>
