--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jspreadsheet-ce/dist/jspreadsheet.min.css" type="text/css" />
     <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
     <link rel="stylesheet" href="style/main.css" />
+    <link rel="stylesheet" href="style/svg-styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;700&display=swap" rel="stylesheet" />
@@ -279,7 +280,61 @@
         </div>
       </div>
     </div> -->
+    <div name="hiddenSvg" style="position: absolute; top: -999; left: -999; z-index: -999">
+      <svg version="1.1" width="0" height="0" xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <pattern id="orgu" width="32" height="32" patternUnits="userSpaceOnUse" patternTransform="rotate(0 50 50)">
+            <!-- <rect x="0" y="0" width="40" height="40" fill="red" stroke="black"></rect> -->
+            <rect x="0" y="0" width="16" height="16" fill="url(#striped-vertical) "></rect>
+            <rect x="16" y="0" width="16" height="16" fill="url(#striped-horizontal) "></rect>
+            <rect x="0" y="16" width="16" height="16" fill="url(#striped-horizontal) "></rect>
+            <rect x="16" y="16" width="16" height="16" fill="url(#striped-vertical) "></rect>
+          </pattern>
+          <pattern id="striped-vertical" width="16" height="16" patternUnits="userSpaceOnUse" patternTransform="rotate(0 50 50)">
+            <rect x="0" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="2" y="0" width="2" height="16" fill="#828282"></rect>
+            <rect x="4" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="6" y="0" width="2" height="16" fill="#828282"></rect>
+            <rect x="8" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="10" y="0" width="2" height="16" fill="#828282"></rect>
+            <rect x="12" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="14" y="0" width="2" height="16" fill="#828282"></rect>
+          </pattern>
+          <pattern id="striped-horizontal" width="16" height="16" patternUnits="userSpaceOnUse" patternTransform="rotate(-90 50 50)">
+            <rect x="0" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="2" y="0" width="2" height="16" fill="#828282"></rect>
+            <rect x="4" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="6" y="0" width="2" height="16" fill="#828282"></rect>
+            <rect x="8" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="10" y="0" width="2" height="16" fill="#828282"></rect>
+            <rect x="12" y="0" width="2" height="16" fill="#cfcfcf"></rect>
+            <rect x="14" y="0" width="2" height="16" fill="#828282"></rect>
+          </pattern>
 
+          <pattern id="dotted" width="15" height="15" patternUnits="userSpaceOnUse">
+            <rect x="0" y="0" width="15" height="15" fill="#828282"></rect>
+            <rect x="5" y="5" width="5" height="5" fill="#cfcfcf"></rect>
+          </pattern>
+          <pattern id="checked" width="12" height="12" patternUnits="userSpaceOnUse" patternTransform="rotate(0 50 50)">
+            <rect x="0" y="0" width="6" height="6" fill="#cfcfcf"></rect>
+            <rect x="6" y="0" width="6" height="6" fill="#828282"></rect>
+            <rect x="0" y="6" width="6" height="6" fill="#828282"></rect>
+            <rect x="6" y="6" width="6" height="6" fill="#cfcfcf"></rect>
+          </pattern>
+          <pattern id="striped" width="10" height="10" patternUnits="userSpaceOnUse" patternTransform="rotate(45 50 50)">
+            <rect x="0" y="0" width="9" height="10" fill="#cfcfcf"></rect>
+            <rect x="9" y="0" width="1" height="10" fill="#828282"></rect>
+          </pattern>
+          <pattern id="striped-thin" width="4" height="10" patternUnits="userSpaceOnUse" patternTransform="rotate(45 50 50)">
+            <rect x="0" y="0" width="3" height="10" fill="var(--color1)"></rect>
+            <rect x="3" y="0" width="1" height="10" fill="var(--color2)"></rect>
+          </pattern>
+          <pattern id="striped-thick" width="6" height="10" patternUnits="userSpaceOnUse" patternTransform="rotate(45 50 50)">
+            <rect x="0" y="0" width="2" height="10" fill="var(--color1)"></rect>
+          </pattern>
+        </defs>
+      </svg>
+    </div>
     <script>
       //let mySheet, myMap;
 
